<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/sv_details_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/rl_contact_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rl_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_username_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:textStyle="normal"
                    android:text="@string/user_name_title"
                    android:textColor="@color/colorlightGrey"
                    android:layout_below="@id/tv_username"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/tv_phonenumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/tv_username_title"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_phonenumber_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_below="@id/tv_phonenumber"
                    android:text="@string/user_phone_title"
                    android:textColor="@color/colorlightGrey"
                    android:textStyle="normal"
                    android:textSize="14sp"/>

                <RelativeLayout
                    android:id="@+id/rl_address_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:layout_below="@id/tv_phonenumber_title">

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_address_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_below="@id/tv_address"
                        android:text="@string/user_address_title"
                        android:textColor="@color/colorlightGrey"
                        android:textStyle="normal"
                        android:textSize="14sp"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/rl_address_layout"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_website_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:textStyle="normal"
                    android:text="@string/user_web_title"
                    android:layout_below="@id/tv_website"
                    android:textColor="@color/colorlightGrey"
                    android:textSize="14sp"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_dummy"
                android:layout_width="match_parent"
                android:layout_below="@id/rl_name_layout"
                android:layout_marginTop="5dp"
                android:layout_height="2dp"
                android:background="@color/colorlightGrey"/>

            <RelativeLayout
                android:id="@+id/rl_company_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_dummy"
                android:layout_marginTop="5dp">


                <TextView
                    android:id="@+id/tv_comp_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_comp_catch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_below="@id/tv_comp_name"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_comp_bs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textStyle="bold"
                    android:layout_below="@id/tv_comp_catch"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_compname_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_below="@id/tv_comp_bs"
                    android:text="@string/user_company_title"
                    android:textColor="@color/colorlightGrey"
                    android:textStyle="normal"
                    android:textSize="14sp"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>